[gd_scene load_steps=13 format=2]

[ext_resource path="res://resources/Theme.tres" type="Theme" id=1]
[ext_resource path="res://scenes/Game/Game.gd" type="Script" id=2]
[ext_resource path="res://scenes/Map/Map.tscn" type="PackedScene" id=3]
[ext_resource path="res://graphics/gui/message_shader.png" type="Texture" id=4]
[ext_resource path="res://scenes/Game/PlayerInfo.tscn" type="PackedScene" id=5]
[ext_resource path="res://fonts/font_ui.font" type="BitmapFont" id=6]
[ext_resource path="res://scenes/Game/Inventory.gd" type="Script" id=7]
[ext_resource path="res://scenes/Game/InventorySlot.tscn" type="PackedScene" id=8]
[ext_resource path="res://scenes/Game/InventoryMenu.gd" type="Script" id=9]
[ext_resource path="res://scenes/Game/LevelUp.gd" type="Script" id=10]
[ext_resource path="res://fonts/font_title.font" type="BitmapFont" id=11]
[ext_resource path="res://resources/black_panel.tres" type="StyleBox" id=12]

[node name="Game" type="Container"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 6.0
margin_right = -8.0
margin_bottom = -6.0
theme = ExtResource( 1 )
script = ExtResource( 2 )

[node name="frame" type="HBoxContainer" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="left" type="VBoxContainer" parent="frame"]
margin_right = 576.0
margin_bottom = 588.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="map" type="ViewportContainer" parent="frame/left"]
margin_right = 576.0
margin_bottom = 434.0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Viewport" type="Viewport" parent="frame/left/map"]
size = Vector2( 576, 434 )
handle_input_locally = false
render_target_update_mode = 3

[node name="Map" parent="frame/left/map/Viewport" instance=ExtResource( 3 )]

[node name="MessageBox" type="RichTextLabel" parent="frame/left"]
editor/display_folded = true
margin_top = 438.0
margin_right = 576.0
margin_bottom = 588.0
rect_min_size = Vector2( 0, 150 )
size_flags_horizontal = 3
bbcode_enabled = true

[node name="TextureFrame" type="TextureRect" parent="frame/left/MessageBox"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_right = -10.0
margin_bottom = -65.0
rect_min_size = Vector2( 10, 85 )
size_flags_horizontal = 3
texture = ExtResource( 4 )
expand = true
stretch_mode = 2

[node name="right" type="VBoxContainer" parent="frame"]
margin_left = 580.0
margin_right = 784.0
margin_bottom = 588.0
rect_min_size = Vector2( 204, 0 )
mouse_filter = 0
size_flags_vertical = 3

[node name="PlayerInfo" parent="frame/right" instance=ExtResource( 5 )]
margin_bottom = 128.0
rect_min_size = Vector2( 204, 116 )
size_flags_vertical = 1

[node name="StatusMessage" type="Label" parent="frame/right"]
margin_top = 132.0
margin_right = 204.0
margin_bottom = 148.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
align = 1

[node name="Activity" type="PanelContainer" parent="frame/right"]
margin_top = 152.0
margin_right = 204.0
margin_bottom = 588.0
size_flags_vertical = 3

[node name="box" type="VBoxContainer" parent="frame/right/Activity"]
margin_left = 6.0
margin_top = 6.0
margin_right = 198.0
margin_bottom = 430.0
mouse_filter = 0

[node name="EquipmentLabel" type="Label" parent="frame/right/Activity/box"]
margin_right = 192.0
margin_bottom = 16.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.137255, 0.333333, 0.423529, 1 )
text = "Equipment"

[node name="weaponName" type="Label" parent="frame/right/Activity/box"]
margin_top = 20.0
margin_right = 192.0
margin_bottom = 36.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
text = "No weapon equipped"

[node name="weaponDescription" type="Label" parent="frame/right/Activity/box"]
margin_top = 40.0
margin_right = 192.0
margin_bottom = 56.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.372549, 0.533333, 0.619608, 1 )
text = " "

[node name="divider1" type="Label" parent="frame/right/Activity/box"]
margin_top = 60.0
margin_right = 192.0
margin_bottom = 76.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.054902, 0.235294, 0.32549, 1 )
text = "------------------------------"
align = 1
valign = 1

[node name="armourName" type="Label" parent="frame/right/Activity/box"]
margin_top = 80.0
margin_right = 192.0
margin_bottom = 96.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
text = "No armour equipped"

[node name="armourDescription" type="Label" parent="frame/right/Activity/box"]
margin_top = 100.0
margin_right = 192.0
margin_bottom = 116.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.372549, 0.533333, 0.619608, 1 )
text = " "

[node name="divider2" type="Label" parent="frame/right/Activity/box"]
margin_top = 120.0
margin_right = 192.0
margin_bottom = 136.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.054902, 0.235294, 0.32549, 1 )
text = "------------------------------"
align = 1
valign = 1

[node name="ItemName" type="Label" parent="frame/right/Activity/box"]
margin_top = 140.0
margin_right = 192.0
margin_bottom = 156.0
mouse_filter = 1
size_flags_vertical = 0

[node name="InventoryLabel" type="Label" parent="frame/right/Activity/box"]
margin_top = 160.0
margin_right = 192.0
margin_bottom = 176.0
mouse_filter = 1
size_flags_vertical = 0
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
text = "Inventory"

[node name="Inventory" type="GridContainer" parent="frame/right/Activity/box"]
editor/display_folded = true
margin_top = 180.0
margin_right = 192.0
margin_bottom = 276.0
mouse_filter = 0
custom_constants/vseparation = 0
custom_constants/hseparation = 0
columns = 8
script = ExtResource( 7 )

[node name="InventorySlot" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]

[node name="InventorySlot16" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 24.0
margin_right = 48.0

[node name="InventorySlot1" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 48.0
margin_right = 72.0

[node name="InventorySlot16 2" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 72.0
margin_right = 96.0

[node name="InventorySlot2" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 96.0
margin_right = 120.0

[node name="InventorySlot16 3" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 120.0
margin_right = 144.0

[node name="InventorySlot3" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 144.0
margin_right = 168.0

[node name="InventorySlot16 4" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 168.0
margin_right = 192.0

[node name="InventorySlot4" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_top = 24.0
margin_bottom = 48.0

[node name="InventorySlot16 5" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 24.0
margin_top = 24.0
margin_right = 48.0
margin_bottom = 48.0

[node name="InventorySlot5" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 48.0
margin_top = 24.0
margin_right = 72.0
margin_bottom = 48.0

[node name="InventorySlot16 6" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 72.0
margin_top = 24.0
margin_right = 96.0
margin_bottom = 48.0

[node name="InventorySlot6" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 96.0
margin_top = 24.0
margin_right = 120.0
margin_bottom = 48.0

[node name="InventorySlot16 7" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 120.0
margin_top = 24.0
margin_right = 144.0
margin_bottom = 48.0

[node name="InventorySlot7" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 144.0
margin_top = 24.0
margin_right = 168.0
margin_bottom = 48.0

[node name="InventorySlot16 8" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 24.0
margin_right = 192.0
margin_bottom = 48.0

[node name="InventorySlot8" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_top = 48.0
margin_bottom = 72.0

[node name="InventorySlot16 9" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 24.0
margin_top = 48.0
margin_right = 48.0
margin_bottom = 72.0

[node name="InventorySlot9" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 48.0
margin_top = 48.0
margin_right = 72.0
margin_bottom = 72.0

[node name="InventorySlot16 10" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 72.0
margin_top = 48.0
margin_right = 96.0
margin_bottom = 72.0

[node name="InventorySlot10" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 96.0
margin_top = 48.0
margin_right = 120.0
margin_bottom = 72.0

[node name="InventorySlot16 11" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 120.0
margin_top = 48.0
margin_right = 144.0
margin_bottom = 72.0

[node name="InventorySlot11" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 144.0
margin_top = 48.0
margin_right = 168.0
margin_bottom = 72.0

[node name="InventorySlot16 12" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 48.0
margin_right = 192.0
margin_bottom = 72.0

[node name="InventorySlot12" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_top = 72.0
margin_bottom = 96.0

[node name="InventorySlot16 13" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 24.0
margin_top = 72.0
margin_right = 48.0
margin_bottom = 96.0

[node name="InventorySlot13" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 48.0
margin_top = 72.0
margin_right = 72.0
margin_bottom = 96.0

[node name="InventorySlot16 14" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 72.0
margin_top = 72.0
margin_right = 96.0
margin_bottom = 96.0

[node name="InventorySlot14" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 96.0
margin_top = 72.0
margin_right = 120.0
margin_bottom = 96.0

[node name="InventorySlot16 15" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 120.0
margin_top = 72.0
margin_right = 144.0
margin_bottom = 96.0

[node name="InventorySlot15" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 144.0
margin_top = 72.0
margin_right = 168.0
margin_bottom = 96.0

[node name="InventorySlot16 16" parent="frame/right/Activity/box/Inventory" instance=ExtResource( 8 )]
margin_left = 168.0
margin_top = 72.0
margin_right = 192.0
margin_bottom = 96.0

[node name="InventoryAction" type="HBoxContainer" parent="frame/right/Activity/box"]
editor/display_folded = true
margin_top = 280.0
margin_right = 192.0
margin_bottom = 312.0
mouse_filter = 0
alignment = 1

[node name="Drop" type="Button" parent="frame/right/Activity/box/InventoryAction"]
margin_left = 26.0
margin_right = 90.0
margin_bottom = 32.0
rect_min_size = Vector2( 64, 32 )
focus_mode = 0
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
enabled_focus_mode = 0
text = " Drop -R- "

[node name="Throw" type="Button" parent="frame/right/Activity/box/InventoryAction"]
margin_left = 94.0
margin_right = 166.0
margin_bottom = 32.0
rect_min_size = Vector2( 72, 32 )
focus_mode = 0
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
enabled_focus_mode = 0
text = " Throw -T- "

[node name="InventoryObjects" type="Node2D" parent="frame/right/Activity/box"]
visible = false
position = Vector2( -6, -6 )

[node name="InventoryMenu" type="PopupPanel" parent="."]
pause_mode = 2
editor/display_folded = true
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 9 )

[node name="frame" type="VBoxContainer" parent="InventoryMenu"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = -6.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Header" type="Label" parent="InventoryMenu/frame"]
margin_right = 784.0
margin_bottom = 16.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
text = "Choose Item(s) to drop..."
align = 1

[node name="HSeparator" type="HSeparator" parent="InventoryMenu/frame"]
margin_top = 20.0
margin_right = 784.0
margin_bottom = 23.0

[node name="Contents" type="HBoxContainer" parent="InventoryMenu/frame"]
margin_top = 27.0
margin_right = 784.0
margin_bottom = 568.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="scroll" type="ScrollContainer" parent="InventoryMenu/frame/Contents"]
margin_right = 195.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
scroll_horizontal_enabled = false

[node name="Items" type="VBoxContainer" parent="InventoryMenu/frame/Contents/scroll"]
margin_right = 195.0
margin_bottom = 541.0
mouse_filter = 0
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Info" type="PanelContainer" parent="InventoryMenu/frame/Contents"]
margin_left = 199.0
margin_right = 784.0
margin_bottom = 541.0
size_flags_horizontal = 3
size_flags_vertical = 3
size_flags_stretch_ratio = 3.0

[node name="Footer" type="Label" parent="InventoryMenu/frame"]
margin_top = 572.0
margin_right = 784.0
margin_bottom = 588.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color = Color( 0.572549, 0.701961, 0.760784, 1 )
text = "T to confirm, ESC to cancel"
align = 1

[node name="LevelUp" type="PopupPanel" parent="."]
pause_mode = 2
editor/display_folded = true
modulate = Color( 1, 1, 1, 0.75 )
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 10 )

[node name="VBoxContainer" type="VBoxContainer" parent="LevelUp"]
anchor_right = 1.0
margin_left = 6.0
margin_top = 6.0
margin_right = -6.0
margin_bottom = 582.0
mouse_filter = 0
alignment = 1

[node name="Title" type="Label" parent="LevelUp/VBoxContainer"]
margin_right = 784.0
margin_bottom = 35.0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 0
custom_fonts/font = ExtResource( 11 )
text = "Level Up"
align = 1
valign = 1

[node name="LevelUp" type="Label" parent="LevelUp/VBoxContainer"]
margin_top = 39.0
margin_right = 784.0
margin_bottom = 55.0
mouse_filter = 1
size_flags_vertical = 0
custom_colors/font_color = Color( 1, 1, 1, 1 )
text = "Level up message"
align = 1
valign = 1

[node name="VSplitContainer" type="VSplitContainer" parent="LevelUp/VBoxContainer"]
margin_top = 59.0
margin_right = 784.0
margin_bottom = 74.0
rect_min_size = Vector2( 0, 15 )

[node name="FlavourText" type="Label" parent="LevelUp/VBoxContainer"]
margin_top = 78.0
margin_right = 784.0
margin_bottom = 94.0
mouse_filter = 1
size_flags_vertical = 0
custom_fonts/font = ExtResource( 6 )
text = "blurb"
align = 1
valign = 1

[node name="VSplitContainer 2" type="VSplitContainer" parent="LevelUp/VBoxContainer"]
margin_top = 98.0
margin_right = 784.0
margin_bottom = 138.0
rect_min_size = Vector2( 0, 40 )

[node name="IncreaseHP" type="Button" parent="LevelUp/VBoxContainer"]
margin_top = 142.0
margin_right = 784.0
margin_bottom = 170.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.123596, 0.878906, 0.878906, 1 )
text = "Increase total HP"

[node name="IncreaseATT" type="Button" parent="LevelUp/VBoxContainer"]
margin_top = 174.0
margin_right = 784.0
margin_bottom = 202.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.123608, 0.879098, 0.878863, 1 )
text = "Increase Attack by 2"

[node name="IncreaseDEF" type="Button" parent="LevelUp/VBoxContainer"]
margin_top = 206.0
margin_right = 784.0
margin_bottom = 234.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.123608, 0.879098, 0.878863, 1 )
text = "Increase Defence by 2"

[node name="IncreaseATTDEF" type="Button" parent="LevelUp/VBoxContainer"]
margin_top = 238.0
margin_right = 784.0
margin_bottom = 266.0
theme = ExtResource( 1 )
custom_styles/hover = ExtResource( 12 )
custom_styles/normal = ExtResource( 12 )
custom_fonts/font = ExtResource( 6 )
custom_colors/font_color_hover = Color( 0.123608, 0.879098, 0.878863, 1 )
text = "Increase both Defence and Attack by 1"
[connection signal="mouse_exited" from="frame/left/map" to="." method="_on_map_mouse_exit"]
[connection signal="pressed" from="frame/right/Activity/box/InventoryAction/Drop" to="frame/right/Activity/box/Inventory" method="_on_Drop_pressed"]
[connection signal="pressed" from="frame/right/Activity/box/InventoryAction/Throw" to="frame/right/Activity/box/Inventory" method="_on_Throw_pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/IncreaseHP" to="." method="_on_IncreaseHP_pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/IncreaseATT" to="." method="_on_IncreaseATT_pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/IncreaseDEF" to="." method="_on_IncreaseDEF_pressed"]
[connection signal="pressed" from="LevelUp/VBoxContainer/IncreaseATTDEF" to="." method="_on_IncreaseATTDEF_pressed"]
